fix ssv flicker; keyspan position

--- a/static/css/img.css
+++ b/static/css/img.css
@@ -29,6 +29,7 @@
 
 .img_cont {
     display: flex;
+    position: relative;
     height: 150px;
     width: 33%;
     border: 2px solid gray;
@@ -50,9 +51,11 @@ img {
 
 .keyspan {
     display: none;
-    position: absolute;
     background-color: rgba(255,255,255,0.6);
     padding: 6px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 .keyspan:after {
